# not-io

./: .cirrus.yml  Cargo.toml  Readme.md
.github/workflows/: rust.yml
flexible-io/: Cargo.toml  Readme.md
flexible-io/src/: lib.rs  reader.rs  stable_with_metadata_of.rs  writer.rs
flexible-io/tests/: aliasing.rs  boxed.rs  motivation.rs
src/: cursor.rs  empty.rs  impls_alloc.rs  impls_always.rs  impls_nostd.rs  impls_nostd_alloc.rs  impls_nostd_noalloc.rs  impls_std.rs  lib.rs  read_adaptor.rs
tests/: no_alloc.rs  no_std.rs  with_std.rs
