[package]
name = "not-io"
description = "A synthesis between no-std, no-alloc and std::io"
version = "0.1.0-alpha"
authors = ["Andreas Molzer <andreas.molzer@gmx.de>"]
edition = "2018"
license = "MIT OR Apache-2.0"
categories = ["embedded", "no-std"]

[dependencies]
# None

[features]
# Enable alloc dependency and some impls that depend on it.
alloc = []
# Enable std dependency compatibility.
std = ["alloc"]

[[tests]]
path = "no_std.rs"

[[tests]]
path = "no_alloc.rs"
features = ["alloc"]

[[tests]]
path = "std.rs"
features = ["std"]
