[package]
# Distribution information.
name = "flexible-io"
version = "0.2.0"
description = "Wraps values such that dyn-safe IO traits need not appear as static bounds"

license = "EUPL-1.2"
authors = ["Andreas Molzer"]
categories = []
repository = "https://github.com/HeroicKatora/not-io"
readme = "Readme.md"

# Packet configuration
edition = "2021"
# rust-version = "1.78" # (hopefully)

[dependencies]

[features]
# Enable this features to utilize `pointer::with_metadata_of`. Otherwise, the
# crate provides some replacement code that contains more unsafe code (still
# works under MIRI) that rewrites pointers.
unstable_set_ptr_value = []
# Alias for the other unstable feature.
unstable_with_metadata_of = ["unstable_set_ptr_value"]
